[package]
name = "rust_game"
version = "0.1.0"
edition = "2021"
# build = "build.rs"


[dependencies]
rand = "*"
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
bevy_rapier3d = "0.27.0"
tch = "*"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[[bin]]
name = "test"
path = "src/test_headless.rs"
[[bin]]
name = "main"
path = "src/main.rs"
